integration-tests/src/tests/runtime/snapshots/integration_tests__tests__runtime__sanity_checks__receipts_gas_profile_nondeterministic_nightly.snap
---
source: integration-tests/src/tests/runtime/sanity_checks.rs
expression: receipts_gas_profile

---
[
    [
        CostGasUsed {
            cost_category: "WASM_HOST_COST",
            cost: "CONTRACT_LOADING_BASE",
            gas_used: 35445963,
        },
        CostGasUsed {
            cost_category: "WASM_HOST_COST",
            cost: "CONTRACT_LOADING_BYTES",
            gas_used: 7369500,
        },
    ],
    [],
]
