integration-tests/src/tests/runtime/snapshots/integration_tests__tests__runtime__sanity_checks__receipts_status.snap
---
source: integration-tests/src/tests/runtime/sanity_checks.rs
expression: receipts_status
---
- SuccessReceiptId: "11111111111111111111111111111111"
- Failure:
    ActionError:
      index: 0
      kind:
        FunctionCallError:
          ExecutionError: "Smart contract panicked: explicit guest panic"
- SuccessValue: ""
- Failure:
    ActionError:
      index: 0
      kind:
        FunctionCallError:
          ExecutionError: "Smart contract panicked: xyz"
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
