integration-tests/src/tests/runtime/snapshots/integration_tests__tests__runtime__sanity_checks__receipts_status_nightly.snap
---
source: integration-tests/src/tests/runtime/sanity_checks.rs
assertion_line: 127
expression: receipts_status
snapshot_kind: text
---
- SuccessReceiptId: "11111111111111111111111111111111"
- Failure:
    ActionError:
      index: 0
      kind:
        FunctionCallError:
          ExecutionError: "Smart contract panicked: explicit guest panic"
- SuccessValue: ""
- Failure:
    ActionError:
      index: 0
      kind:
        FunctionCallError:
          ExecutionError: "Smart contract panicked: xyz"
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
- SuccessValue: ""
