integration-tests/src/tests/runtime/snapshots/integration_tests__tests__runtime__sanity_checks__receipts_status_nondeterministic_nightly.snap
---
source: integration-tests/src/tests/runtime/sanity_checks.rs
expression: receipts_status
---
- SuccessValue: ""
- SuccessValue: ""
